--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
 
         <activity
             android:name=".controller.MainActivity"
+            android:configChanges="orientation|screenSize"
             android:exported="true" />
 
         <activity
