--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.madalin.licenta">
-
     <!-- permisiune utilizare internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,31 +11,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Licenta">
-
         <activity
             android:name=".controller.ResetareParolaActivity"
             android:exported="false"
             android:parentActivityName=".controller.AutentificareActivity" />
-
         <activity
             android:name=".controller.ProfilActivity"
             android:exported="false"
             android:parentActivityName=".controller.MainActivity" />
-
         <activity
             android:name=".controller.InregistrareActivity"
             android:exported="false"
             android:parentActivityName=".controller.AutentificareActivity" />
-
         <activity
             android:name=".controller.AutentificareActivity"
             android:exported="false" />
-
         <activity
             android:name=".controller.MainActivity"
-            android:configChanges="orientation|screenSize"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="true" />
-
         <activity
             android:name=".controller.SplashScreenActivity"
             android:exported="true"
